tests/NormalTests/paczka1/small_fuzzy/76444642.err
Error in line 3: dROGo S699 36,5
Error in line 7: dROGo A668 97,5
